2010-09-20 v1.30 rafl 5558 tests
  * Re-upload 1.29 as a stable release without further changes.

2010-09-19 v1.29 rafl 5558 tests  DEVELOPMENT RELEASE
  * Attempt to fix a bug in the bundled version Devel::CheckLib.
    It used to ignore @Config{qw(ccflags ldflags)} and only tried to look for
    headers and libraries with the compiler's default include- and lib-paths as
    well as those explicitly asked for by the user.

2010-09-17 v1.28 rafl 5558 tests
  * Re-upload 1.27 without further changes as a stable release.

2010-09-15 v1.27 rafl 5558 tests  DEVELOPMENT RELEASE
  * Try to support perls older than 5.8.8 again.
    Tested with 5.8.7 and 5.6.2.

2010-09-14 v1.26 rafl 5558 tests  DEVELOPMENT RELEASE
  * Error out early if libgmp or gmp.h are missing.
  * Clone Math::BigInt::GMP instances on thread cloning.
    This should make the module threadsafe.

2010-09-10 v1.25 rafl 5536 tests
  * Fix tests with Math::BigInt >= 1.90 and depend on it.

2007-07-31 v1.24 Tels 5530 tests
  * apply patch for warnings about ptr size mismatch under Cygwin (thanx Reini Urban!)
  * make it work under 5.6.x again by defining SvUOK() (Thanx Marcus Holland-Moritz
    and Reini Urban!)

2007-07-25 v1.23 Tels 5527 tests
  * require Math::BigInt 1.87
  * fix for _new() (appeared under Cygwin, but possible others, thanx
    Linda W. (report) and Reini Urban (patch)!)

2007-06-01 v1.22 Tels 5527 tests
  * require Math::BigInt 1.86
  * support api_version() 2 by adding _nok()
  * fix compilation issues on Mac/Darwin
  * _log_int() modifies it's argument instead of just returning a
    different object as result
  * speed up _log_int() greatly by taking a guess of the result
    and then improve it, instead of startig with 1 and going up. This means
    it takes now a more or less constant time, instead of a time proportional
    to the size/value of the result:

 Using Math::BigInt::GMP v1.21
  baselen 2:     3s (3.22 usr +  0.00 sys =  3.22 CPU) @ 7270/s (n=23411)