@@ -15,14 +15,14 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 70d6187d0152848c922dc4360fa6dd3a3dc35c62 BUGS
-SHA1 b81d57a6db5c9bfa32bea2e5ea4994d8e63ab7ea CHANGES
+SHA1 8e1de11d1705797957b90b18cb347d3168df6726 CHANGES
 SHA1 dda5ca4f413031e9efcaa1600461d5e2adaa3a40 CREDITS
-SHA1 35c155c10a9534cf296e357d60f06eed933cdba0 GMP.xs
+SHA1 080095890588199a038e4c2cd2c70df0dcdbf929 GMP.xs
 SHA1 fcb1ead705a964b5555ff355534cbcf8b4c176e5 INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
-SHA1 d92d036825f848456802a2100373b7e021c1e4ed MANIFEST
+SHA1 babd5d074bee5dc8eb6463a155a7a6b5d978befb MANIFEST
 SHA1 f3190cb30c8df53e0fd78658ff9a6132e031042e MANIFEST.SKIP
-SHA1 f86bf6843cc6f4189c794b0f3646deb53ace9d8a META.yml
+SHA1 3e21b6b89290e32f22c0d6a3cf99fb94f49af10b META.yml
 SHA1 32b33a1c160e1efbf82b1bf8765cde8455a32550 Makefile.PL
 SHA1 e9de29b6e5e9a5e446231b5b12b644f6ed2caafc README
 SHA1 acf3dd42f0d8a87dd02ef9f5f74b894423ffd4d8 TODO
@@ -30,7 +30,7 @@ SHA1 fd48d0d8750eb949e485d8136b5b424fe73e9775 build/README
 SHA1 7bcc4113830721ad6e37a1ea79df94a6987c836d build/leak.pl
 SHA1 ac25bda8a6eb9058a9e42a8943c3e11b9fed88dc build/leaktest
 SHA1 f1e5cb2590288936ff4a330903fb3f7de0b83d9b inc/Devel/CheckLib.pm
-SHA1 d666812bf52f5d7b7b21e2fda3d3907869ef324d lib/Math/BigInt/GMP.pm
+SHA1 eb18c6b2fea586ef5a8b26dee0d185e8ca76e3d6 lib/Math/BigInt/GMP.pm
 SHA1 b389295c7eb542fb89f55d37390a35ac582b5e6c t/bigfltpm.inc
 SHA1 a6659404498c1d7b74e055769710e00bf425e355 t/bigfltpm.t
 SHA1 0f8838bf47e9c21a95bc15db11f435836440525c t/bigintg.t
@@ -39,13 +39,14 @@ SHA1 a1b919d7ec294a89ceb738a17cb986689ff80c98 t/bigintpm.t
 SHA1 b68535cf9a33efa949c80b166302a866fd13cff9 t/biglog.t
 SHA1 7eda06bd6d27b4092ab7266b1659e3a6ed369b26 t/bigroot.t
 SHA1 17935f6d2607dfd441f6f59d69d5aaf282a16bfc t/pod.t
-SHA1 c7406b64a2eff28ca33248f647eee3199deb10dc t/pod_cov.t
+SHA1 4ee0586efb80691e061368a7700dc081889f1f03 t/pod_cov.t
+SHA1 f1bcab94173a57861fcc40ac90eb72f64aafea7f t/storable.t
 SHA1 e489ec79ce64d0d943e291a3eaa654298e6e49ab t/threads.t
-SHA1 d6074079ab439bd3485ed2a5d784996fcd9e717d typemap
+SHA1 20cf43acc1a728d0ee8245b106937a2a97900266 typemap
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.10 (GNU/Linux)
 
-iEYEARECAAYFAkyXxfgACgkQdC8qQo5jWl5f0ACbBNK7DLBeMsB/ez5PvQYpAHYZ
-bO8An3s8K42+Bziime51a5TpMKbaKPW6
-=sbpG
+iEYEARECAAYFAkyX22IACgkQdC8qQo5jWl4r7ACggh+SNylS8y1Sl3O3R0cukDmv
+nP0An2NJWEAB6CeiPokjker+lO8PrgOT
+=f0i2
 -----END PGP SIGNATURE-----
