@@ -21,8 +21,8 @@ SKIP:
     $@ ? 0 : 1;
     };
 
-  my $trustme = { 
-    trustme => [ 'api_version' ], 
+  my $trustme = {
+    trustme => [ 'api_version', 'STORABLE_freeze', 'STORABLE_thaw' ],
     coverage_class => 'Pod::Coverage::CountParents',
     };
   pod_coverage_ok( 'Math::BigInt::GMP', $trustme, "All our Math::BigInt::GMP are covered" );
